--- a/serverless.yml
+++ b/serverless.yml
@@ -47,4 +47,5 @@ functions:
           method: get
 
 resources:
-  - "{file(resources/table.yaml)}"
+  Resources:
+    - "${file(resources/table.yaml)}"
