--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "serverless-demo",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {
-    "serverless": "^2.44.0"
-  },
-  "devDependencies": {},
   "scripts": {
     "sls": "sls"
+  },
+  "devDependencies": {
+    "serverless": "^2.44.0"
   }
 }
